// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration Setup Page Test Renders integration setup page as expected 1`] = `
<SetupIntegrationStepsPage>
  <EuiPage>
    <div
      className="euiPage euiPage--paddingMedium euiPage--grow"
    >
      <EuiPageBody>
        <div
          className="euiPageBody euiPageBody--borderRadiusNone"
        >
          <EuiFlexGroup>
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <EuiFlexItem>
                <div
                  className="euiFlexItem"
                >
                  <EuiSteps
                    steps={
                      Array [
                        Object {
                          "children": <EuiText />,
                          "status": "",
                          "title": "Name Integration",
                        },
                        Object {
                          "children": <EuiText />,
                          "status": "disabled",
                          "title": "Select index or data source for integration",
                        },
                      ]
                    }
                  >
                    <div
                      className="euiSteps"
                    >
                      <EuiStep
                        headingElement="p"
                        key="0"
                        status=""
                        step={1}
                        title="Name Integration"
                      >
                        <div
                          className="euiStep"
                        >
                          <div
                            className="euiStep__titleWrapper"
                          >
                            <EuiStepNumber
                              className="euiStep__circle"
                              isHollow={false}
                              number={1}
                              status=""
                              titleSize="s"
                            >
                              <span
                                className="euiStepNumber euiStep__circle"
                              >
                                <EuiScreenReaderOnly>
                                  <span
                                    className="euiScreenReaderOnly"
                                  >
                                    Step 1
                                  </span>
                                </EuiScreenReaderOnly>
                                <span
                                  aria-hidden="true"
                                  className="euiStepNumber__number"
                                >
                                  1
                                </span>
                              </span>
                            </EuiStepNumber>
                            <EuiTitle
                              className="euiStep__title"
                              size="s"
                            >
                              <p
                                className="euiTitle euiTitle--small euiStep__title"
                              >
                                Name Integration
                              </p>
                            </EuiTitle>
                          </div>
                          <div
                            className="euiStep__content"
                          >
                            <EuiText>
                              <div
                                className="euiText euiText--medium"
                              />
                            </EuiText>
                          </div>
                        </div>
                      </EuiStep>
                      <EuiStep
                        headingElement="p"
                        key="1"
                        status="disabled"
                        step={2}
                        title="Select index or data source for integration"
                      >
                        <div
                          className="euiStep euiStep-isDisabled"
                        >
                          <div
                            className="euiStep__titleWrapper"
                          >
                            <EuiStepNumber
                              className="euiStep__circle"
                              isHollow={false}
                              number={2}
                              status="disabled"
                              titleSize="s"
                            >
                              <span
                                className="euiStepNumber euiStepNumber--disabled euiStep__circle"
                              >
                                <EuiScreenReaderOnly>
                                  <span
                                    className="euiScreenReaderOnly"
                                  >
                                    Step 2 is disabled
                                  </span>
                                </EuiScreenReaderOnly>
                                <span
                                  aria-hidden="true"
                                  className="euiStepNumber__number"
                                >
                                  2
                                </span>
                              </span>
                            </EuiStepNumber>
                            <EuiTitle
                              className="euiStep__title"
                              size="s"
                            >
                              <p
                                className="euiTitle euiTitle--small euiStep__title"
                              >
                                Select index or data source for integration
                              </p>
                            </EuiTitle>
                          </div>
                          <div
                            className="euiStep__content"
                          >
                            <EuiText>
                              <div
                                className="euiText euiText--medium"
                              />
                            </EuiText>
                          </div>
                        </div>
                      </EuiStep>
                    </div>
                  </EuiSteps>
                </div>
              </EuiFlexItem>
              <EuiFlexItem>
                <div
                  className="euiFlexItem"
                >
                  <SetupIntegrationStep
                    activeStep={0}
                    config={
                      Object {
                        "dataSourceDescription": "",
                        "dataSourceFileType": "parquet",
                        "dataSourceLocation": "",
                        "dataSourceName": "",
                        "existingDataSourceName": "",
                        "instanceName": "",
                        "useExisting": true,
                      }
                    }
                    updateConfig={[Function]}
                  >
                    <SetupIntegrationMetadata
                      name=""
                      setName={[Function]}
                    >
                      <EuiForm>
                        <div
                          className="euiForm"
                        >
                          <EuiTitle>
                            <h1
                              className="euiTitle euiTitle--medium"
                            >
                              Name Integration
                            </h1>
                          </EuiTitle>
                          <EuiFormRow
                            describedByIds={Array []}
                            display="row"
                            fullWidth={false}
                            hasChildLabel={true}
                            hasEmptyLabelSpace={false}
                            helpText="The name will be used to label the newly added integration"
                            label="Name"
                            labelType="label"
                          >
                            <div
                              className="euiFormRow"
                              id="random_html_id-row"
                            >
                              <div
                                className="euiFormRow__labelWrapper"
                              >
                                <EuiFormLabel
                                  className="euiFormRow__label"
                                  htmlFor="random_html_id"
                                  isFocused={false}
                                  type="label"
                                >
                                  <label
                                    className="euiFormLabel euiFormRow__label"
                                    htmlFor="random_html_id"
                                  >
                                    Name
                                  </label>
                                </EuiFormLabel>
                              </div>
                              <div
                                className="euiFormRow__fieldWrapper"
                              >
                                <EuiFieldText
                                  aria-describedby="random_html_id-help-0"
                                  id="random_html_id"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  value=""
                                >
                                  <EuiFormControlLayout
                                    fullWidth={false}
                                    inputId="random_html_id"
                                  >
                                    <div
                                      className="euiFormControlLayout"
                                    >
                                      <div
                                        className="euiFormControlLayout__childrenWrapper"
                                      >
                                        <EuiValidatableControl>
                                          <input
                                            aria-describedby="random_html_id-help-0"
                                            className="euiFieldText"
                                            id="random_html_id"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            type="text"
                                            value=""
                                          />
                                        </EuiValidatableControl>
                                        <EuiFormControlLayoutIcons />
                                      </div>
                                    </div>
                                  </EuiFormControlLayout>
                                </EuiFieldText>
                                <EuiFormHelpText
                                  className="euiFormRow__text"
                                  id="random_html_id-help-0"
                                  key="The name will be used to label the newly added integration"
                                >
                                  <div
                                    className="euiFormHelpText euiFormRow__text"
                                    id="random_html_id-help-0"
                                  >
                                    The name will be used to label the newly added integration
                                  </div>
                                </EuiFormHelpText>
                              </div>
                            </div>
                          </EuiFormRow>
                        </div>
                      </EuiForm>
                    </SetupIntegrationMetadata>
                  </SetupIntegrationStep>
                </div>
              </EuiFlexItem>
            </div>
          </EuiFlexGroup>
          <SetupBottomBar
            config={
              Object {
                "dataSourceDescription": "",
                "dataSourceFileType": "parquet",
                "dataSourceLocation": "",
                "dataSourceName": "",
                "existingDataSourceName": "",
                "instanceName": "",
                "useExisting": true,
              }
            }
            setStep={[Function]}
            step={0}
          >
            <EuiBottomBar>
              <EuiPortal>
                <Portal
                  containerInfo={
                    <div>
                      <section
                        aria-label="Page level controls"
                        class="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium"
                      >
                        <h2
                          class="euiScreenReaderOnly"
                        >
                          Page level controls
                        </h2>
                        <div
                          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                        >
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <button
                              class="euiButton euiButton--danger"
                              type="button"
                            >
                              <span
                                class="euiButtonContent euiButton__content"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                  focusable="false"
                                  height="16"
                                  role="img"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                />
                                <span
                                  class="euiButton__text"
                                >
                                  Cancel
                                </span>
                              </span>
                            </button>
                          </div>
                          <div
                            class="euiFlexItem"
                          >
                            <div
                              class="euiSpacer euiSpacer--l"
                            />
                          </div>
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <button
                              class="euiButton euiButton--primary euiButton--fill"
                              type="button"
                            >
                              <span
                                class="euiButtonContent euiButton__content"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                  focusable="false"
                                  height="16"
                                  role="img"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                />
                                <span
                                  class="euiButton__text"
                                >
                                  Next
                                </span>
                              </span>
                            </button>
                          </div>
                        </div>
                      </section>
                      <p
                        aria-live="assertive"
                        class="euiScreenReaderOnly"
                      >
                        There is a new region landmark with page level controls at the end of the document.
                      </p>
                    </div>
                  }
                >
                  <EuiI18n
                    default="Page level controls"
                    token="euiBottomBar.screenReaderHeading"
                  >
                    <section
                      aria-label="Page level controls"
                      className="euiBottomBar euiBottomBar--fixed euiBottomBar--paddingMedium"
                      style={
                        Object {
                          "bottom": undefined,
                          "left": undefined,
                          "right": undefined,
                          "top": undefined,
                        }
                      }
                    >
                      <EuiScreenReaderOnly>
                        <h2
                          className="euiScreenReaderOnly"
                        >
                          Page level controls
                        </h2>
                      </EuiScreenReaderOnly>
                      <EuiFlexGroup
                        justifyContent="flexEnd"
                      >
                        <div
                          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                        >
                          <EuiFlexItem
                            grow={false}
                          >
                            <div
                              className="euiFlexItem euiFlexItem--flexGrowZero"
                            >
                              <EuiButton
                                color="danger"
                                iconType="cross"
                                onClick={[Function]}
                              >
                                <EuiButtonDisplay
                                  baseClassName="euiButton"
                                  color="danger"
                                  disabled={false}
                                  element="button"
                                  iconType="cross"
                                  isDisabled={false}
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <button
                                    className="euiButton euiButton--danger"
                                    disabled={false}
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "minWidth": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    <EuiButtonContent
                                      className="euiButton__content"
                                      iconSide="left"
                                      iconType="cross"
                                      textProps={
                                        Object {
                                          "className": "euiButton__text",
                                        }
                                      }
                                    >
                                      <span
                                        className="euiButtonContent euiButton__content"
                                      >
                                        <EuiIcon
                                          className="euiButtonContent__icon"
                                          color="inherit"
                                          size="m"
                                          type="cross"
                                        >
                                          <EuiIconEmpty
                                            aria-hidden={true}
                                            className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                            focusable="false"
                                            role="img"
                                            style={null}
                                          >
                                            <svg
                                              aria-hidden={true}
                                              className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                              focusable="false"
                                              height={16}
                                              role="img"
                                              style={null}
                                              viewBox="0 0 16 16"
                                              width={16}
                                              xmlns="http://www.w3.org/2000/svg"
                                            />
                                          </EuiIconEmpty>
                                        </EuiIcon>
                                        <span
                                          className="euiButton__text"
                                        >
                                          Cancel
                                        </span>
                                      </span>
                                    </EuiButtonContent>
                                  </button>
                                </EuiButtonDisplay>
                              </EuiButton>
                            </div>
                          </EuiFlexItem>
                          <EuiFlexItem>
                            <div
                              className="euiFlexItem"
                            >
                              <EuiSpacer>
                                <div
                                  className="euiSpacer euiSpacer--l"
                                />
                              </EuiSpacer>
                            </div>
                          </EuiFlexItem>
                          <EuiFlexItem
                            grow={false}
                          >
                            <div
                              className="euiFlexItem euiFlexItem--flexGrowZero"
                            >
                              <EuiButton
                                fill={true}
                                iconType="check"
                                onClick={[Function]}
                              >
                                <EuiButtonDisplay
                                  baseClassName="euiButton"
                                  disabled={false}
                                  element="button"
                                  fill={true}
                                  iconType="check"
                                  isDisabled={false}
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <button
                                    className="euiButton euiButton--primary euiButton--fill"
                                    disabled={false}
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "minWidth": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    <EuiButtonContent
                                      className="euiButton__content"
                                      iconSide="left"
                                      iconType="check"
                                      textProps={
                                        Object {
                                          "className": "euiButton__text",
                                        }
                                      }
                                    >
                                      <span
                                        className="euiButtonContent euiButton__content"
                                      >
                                        <EuiIcon
                                          className="euiButtonContent__icon"
                                          color="inherit"
                                          size="m"
                                          type="check"
                                        >
                                          <EuiIconEmpty
                                            aria-hidden={true}
                                            className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                            focusable="false"
                                            role="img"
                                            style={null}
                                          >
                                            <svg
                                              aria-hidden={true}
                                              className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                              focusable="false"
                                              height={16}
                                              role="img"
                                              style={null}
                                              viewBox="0 0 16 16"
                                              width={16}
                                              xmlns="http://www.w3.org/2000/svg"
                                            />
                                          </EuiIconEmpty>
                                        </EuiIcon>
                                        <span
                                          className="euiButton__text"
                                        >
                                          Next
                                        </span>
                                      </span>
                                    </EuiButtonContent>
                                  </button>
                                </EuiButtonDisplay>
                              </EuiButton>
                            </div>
                          </EuiFlexItem>
                        </div>
                      </EuiFlexGroup>
                    </section>
                  </EuiI18n>
                  <EuiScreenReaderOnly>
                    <p
                      aria-live="assertive"
                      className="euiScreenReaderOnly"
                    >
                      <EuiI18n
                        default="There is a new region landmark with page level controls at the end of the document."
                        token="euiBottomBar.screenReaderAnnouncement"
                      >
                        There is a new region landmark with page level controls at the end of the document.
                      </EuiI18n>
                    </p>
                  </EuiScreenReaderOnly>
                </Portal>
              </EuiPortal>
            </EuiBottomBar>
          </SetupBottomBar>
        </div>
      </EuiPageBody>
    </div>
  </EuiPage>
</SetupIntegrationStepsPage>
`;

exports[`Integration Setup Page Test Renders the data source form as expected 1`] = `
<SetupIntegrationDataSource
  config={
    Object {
      "dataSourceDescription": "Test Datasource Description",
      "dataSourceFileType": "json",
      "dataSourceLocation": "ss4o_logs-test-new-location",
      "dataSourceName": "Test Datasource Name",
      "existingDataSourceName": "ss4o_logs-test-existing-location",
      "instanceName": "Test Instance Name",
      "useExisting": true,
    }
  }
  setShowDataModal={[Function]}
  setTableDetected={[Function]}
  showDataModal={false}
  tableDetected={false}
  updateConfig={[Function]}
>
  <div>
    <EuiSwitch
      checked={false}
      label="(debug) Table detected"
      onChange={[Function]}
    >
      <div
        className="euiSwitch"
      >
        <button
          aria-checked={false}
          aria-labelledby="random_html_id"
          className="euiSwitch__button"
          id="random_html_id"
          onClick={[Function]}
          role="switch"
          type="button"
        >
          <span
            className="euiSwitch__body"
          >
            <span
              className="euiSwitch__thumb"
            />
            <span
              className="euiSwitch__track"
            >
              <EuiIcon
                className="euiSwitch__icon"
                size="m"
                type="cross"
              >
                <EuiIconCross
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiSwitch__icon"
                  focusable="false"
                  role="img"
                  style={null}
                >
                  <svg
                    aria-hidden={true}
                    className="euiIcon euiIcon--medium euiSwitch__icon"
                    focusable="false"
                    height={16}
                    role="img"
                    style={null}
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
                    />
                  </svg>
                </EuiIconCross>
              </EuiIcon>
              <EuiIcon
                className="euiSwitch__icon euiSwitch__icon--checked"
                size="m"
                type="check"
              >
                <EuiIconCheck
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiSwitch__icon euiSwitch__icon--checked"
                  focusable="false"
                  role="img"
                  style={null}
                >
                  <svg
                    aria-hidden={true}
                    className="euiIcon euiIcon--medium euiSwitch__icon euiSwitch__icon--checked"
                    focusable="false"
                    height={16}
                    role="img"
                    style={null}
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                      fillRule="evenodd"
                    />
                  </svg>
                </EuiIconCheck>
              </EuiIcon>
            </span>
          </span>
        </button>
        <span
          className="euiSwitch__label"
          id="random_html_id"
          onClick={[Function]}
        >
          (debug) Table detected
        </span>
      </div>
    </EuiSwitch>
    <EuiSpacer
      size="xxl"
    >
      <div
        className="euiSpacer euiSpacer--xxl"
      />
    </EuiSpacer>
    <EuiForm>
      <div
        className="euiForm"
      >
        <EuiTitle>
          <h1
            className="euiTitle euiTitle--medium"
          >
            Select index or data source for integration
          </h1>
        </EuiTitle>
        <EuiSpacer>
          <div
            className="euiSpacer euiSpacer--l"
          />
        </EuiSpacer>
        <EuiCallOut
          iconType="iInCircle"
          title="No tables were found"
        >
          <div
            className="euiCallOut euiCallOut--primary"
          >
            <div
              className="euiCallOutHeader"
            >
              <EuiIcon
                aria-hidden="true"
                className="euiCallOutHeader__icon"
                color="inherit"
                size="m"
                type="iInCircle"
              >
                <EuiIconEmpty
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiCallOutHeader__icon"
                  focusable="false"
                  role="img"
                  style={null}
                >
                  <svg
                    aria-hidden={true}
                    className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiCallOutHeader__icon"
                    focusable="false"
                    height={16}
                    role="img"
                    style={null}
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </EuiIconEmpty>
              </EuiIcon>
              <span
                className="euiCallOutHeader__title"
              >
                No tables were found
              </span>
            </div>
            <EuiText
              color="default"
              size="s"
            >
              <div
                className="euiText euiText--small"
              >
                <EuiTextColor
                  color="default"
                  component="div"
                >
                  <div
                    className="euiTextColor euiTextColor--default"
                  >
                    <p>
                      No problem, we can help. Tell us about your data.
                    </p>
                  </div>
                </EuiTextColor>
              </div>
            </EuiText>
          </div>
        </EuiCallOut>
        <EuiSpacer>
          <div
            className="euiSpacer euiSpacer--l"
          />
        </EuiSpacer>
        <EuiSwitch
          checked={false}
          disabled={true}
          label="Use existing Data Source"
          onChange={[Function]}
        >
          <div
            className="euiSwitch"
          >
            <button
              aria-checked={false}
              aria-labelledby="random_html_id"
              className="euiSwitch__button"
              disabled={true}
              id="random_html_id"
              onClick={[Function]}
              role="switch"
              type="button"
            >
              <span
                className="euiSwitch__body"
              >
                <span
                  className="euiSwitch__thumb"
                />
                <span
                  className="euiSwitch__track"
                >
                  <EuiIcon
                    className="euiSwitch__icon"
                    size="m"
                    type="cross"
                  >
                    <EuiIconCross
                      aria-hidden={true}
                      className="euiIcon euiIcon--medium euiSwitch__icon"
                      focusable="false"
                      role="img"
                      style={null}
                    >
                      <svg
                        aria-hidden={true}
                        className="euiIcon euiIcon--medium euiSwitch__icon"
                        focusable="false"
                        height={16}
                        role="img"
                        style={null}
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
                        />
                      </svg>
                    </EuiIconCross>
                  </EuiIcon>
                  <EuiIcon
                    className="euiSwitch__icon euiSwitch__icon--checked"
                    size="m"
                    type="check"
                  >
                    <EuiIconCheck
                      aria-hidden={true}
                      className="euiIcon euiIcon--medium euiSwitch__icon euiSwitch__icon--checked"
                      focusable="false"
                      role="img"
                      style={null}
                    >
                      <svg
                        aria-hidden={true}
                        className="euiIcon euiIcon--medium euiSwitch__icon euiSwitch__icon--checked"
                        focusable="false"
                        height={16}
                        role="img"
                        style={null}
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                          fillRule="evenodd"
                        />
                      </svg>
                    </EuiIconCheck>
                  </EuiIcon>
                </span>
              </span>
            </button>
            <span
              className="euiSwitch__label"
              id="random_html_id"
              onClick={[Function]}
            >
              Use existing Data Source
            </span>
          </div>
        </EuiSwitch>
        <EuiSpacer>
          <div
            className="euiSpacer euiSpacer--l"
          />
        </EuiSpacer>
        <SetupIntegrationNewTable
          config={
            Object {
              "dataSourceDescription": "Test Datasource Description",
              "dataSourceFileType": "json",
              "dataSourceLocation": "ss4o_logs-test-new-location",
              "dataSourceName": "Test Datasource Name",
              "existingDataSourceName": "ss4o_logs-test-existing-location",
              "instanceName": "Test Instance Name",
              "useExisting": true,
            }
          }
          updateConfig={[Function]}
        >
          <div>
            <EuiFormRow
              describedByIds={Array []}
              display="row"
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              label="Title"
              labelType="label"
            >
              <div
                className="euiFormRow"
                id="random_html_id-row"
              >
                <div
                  className="euiFormRow__labelWrapper"
                >
                  <EuiFormLabel
                    className="euiFormRow__label"
                    htmlFor="random_html_id"
                    isFocused={false}
                    type="label"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="random_html_id"
                    >
                      Title
                    </label>
                  </EuiFormLabel>
                </div>
                <div
                  className="euiFormRow__fieldWrapper"
                >
                  <EuiFieldText
                    id="random_html_id"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="Test Datasource Name"
                  >
                    <EuiFormControlLayout
                      fullWidth={false}
                      inputId="random_html_id"
                    >
                      <div
                        className="euiFormControlLayout"
                      >
                        <div
                          className="euiFormControlLayout__childrenWrapper"
                        >
                          <EuiValidatableControl>
                            <input
                              className="euiFieldText"
                              id="random_html_id"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="text"
                              value="Test Datasource Name"
                            />
                          </EuiValidatableControl>
                          <EuiFormControlLayoutIcons />
                        </div>
                      </div>
                    </EuiFormControlLayout>
                  </EuiFieldText>
                </div>
              </div>
            </EuiFormRow>
            <EuiFormRow
              describedByIds={Array []}
              display="row"
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              label="Description (optional)"
              labelType="label"
            >
              <div
                className="euiFormRow"
                id="random_html_id-row"
              >
                <div
                  className="euiFormRow__labelWrapper"
                >
                  <EuiFormLabel
                    className="euiFormRow__label"
                    htmlFor="random_html_id"
                    isFocused={false}
                    type="label"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="random_html_id"
                    >
                      Description (optional)
                    </label>
                  </EuiFormLabel>
                </div>
                <div
                  className="euiFormRow__fieldWrapper"
                >
                  <EuiFieldText
                    id="random_html_id"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="Test Datasource Description"
                  >
                    <EuiFormControlLayout
                      fullWidth={false}
                      inputId="random_html_id"
                    >
                      <div
                        className="euiFormControlLayout"
                      >
                        <div
                          className="euiFormControlLayout__childrenWrapper"
                        >
                          <EuiValidatableControl>
                            <input
                              className="euiFieldText"
                              id="random_html_id"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="text"
                              value="Test Datasource Description"
                            />
                          </EuiValidatableControl>
                          <EuiFormControlLayoutIcons />
                        </div>
                      </div>
                    </EuiFormControlLayout>
                  </EuiFieldText>
                </div>
              </div>
            </EuiFormRow>
            <EuiFormRow
              describedByIds={Array []}
              display="row"
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              label="File Type"
              labelType="label"
            >
              <div
                className="euiFormRow"
                id="random_html_id-row"
              >
                <div
                  className="euiFormRow__labelWrapper"
                >
                  <EuiFormLabel
                    className="euiFormRow__label"
                    htmlFor="random_html_id"
                    isFocused={false}
                    type="label"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="random_html_id"
                    >
                      File Type
                    </label>
                  </EuiFormLabel>
                </div>
                <div
                  className="euiFormRow__fieldWrapper"
                >
                  <EuiSelect
                    id="random_html_id"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    options={
                      Array [
                        Object {
                          "text": "parquet",
                          "value": "parquet",
                        },
                        Object {
                          "text": "json",
                          "value": "json",
                        },
                      ]
                    }
                    value="json"
                  >
                    <EuiFormControlLayout
                      compressed={false}
                      fullWidth={false}
                      icon={
                        Object {
                          "side": "right",
                          "type": "arrowDown",
                        }
                      }
                      inputId="random_html_id"
                      isLoading={false}
                    >
                      <div
                        className="euiFormControlLayout"
                      >
                        <div
                          className="euiFormControlLayout__childrenWrapper"
                        >
                          <EuiValidatableControl>
                            <select
                              className="euiSelect"
                              id="random_html_id"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onMouseUp={[Function]}
                              value="json"
                            >
                              <option
                                key="0"
                                value="parquet"
                              >
                                parquet
                              </option>
                              <option
                                key="1"
                                value="json"
                              >
                                json
                              </option>
                            </select>
                          </EuiValidatableControl>
                          <EuiFormControlLayoutIcons
                            compressed={false}
                            icon={
                              Object {
                                "side": "right",
                                "type": "arrowDown",
                              }
                            }
                            isLoading={false}
                          >
                            <div
                              className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                            >
                              <EuiFormControlLayoutCustomIcon
                                size="m"
                                type="arrowDown"
                              >
                                <span
                                  className="euiFormControlLayoutCustomIcon"
                                >
                                  <EuiIcon
                                    aria-hidden="true"
                                    className="euiFormControlLayoutCustomIcon__icon"
                                    size="m"
                                    type="arrowDown"
                                  >
                                    <EuiIconEmpty
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                      focusable="false"
                                      role="img"
                                      style={null}
                                    >
                                      <svg
                                        aria-hidden={true}
                                        className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                        focusable="false"
                                        height={16}
                                        role="img"
                                        style={null}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </EuiIconEmpty>
                                  </EuiIcon>
                                </span>
                              </EuiFormControlLayoutCustomIcon>
                            </div>
                          </EuiFormControlLayoutIcons>
                        </div>
                      </div>
                    </EuiFormControlLayout>
                  </EuiSelect>
                </div>
              </div>
            </EuiFormRow>
            <EuiFormRow
              describedByIds={Array []}
              display="row"
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              label="Location to store table"
              labelType="label"
            >
              <div
                className="euiFormRow"
                id="random_html_id-row"
              >
                <div
                  className="euiFormRow__labelWrapper"
                >
                  <EuiFormLabel
                    className="euiFormRow__label"
                    htmlFor="random_html_id"
                    isFocused={false}
                    type="label"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="random_html_id"
                    >
                      Location to store table
                    </label>
                  </EuiFormLabel>
                </div>
                <div
                  className="euiFormRow__fieldWrapper"
                >
                  <EuiFieldText
                    id="random_html_id"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="ss4o_logs-test-new-location"
                  >
                    <EuiFormControlLayout
                      fullWidth={false}
                      inputId="random_html_id"
                    >
                      <div
                        className="euiFormControlLayout"
                      >
                        <div
                          className="euiFormControlLayout__childrenWrapper"
                        >
                          <EuiValidatableControl>
                            <input
                              className="euiFieldText"
                              id="random_html_id"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="text"
                              value="ss4o_logs-test-new-location"
                            />
                          </EuiValidatableControl>
                          <EuiFormControlLayoutIcons />
                        </div>
                      </div>
                    </EuiFormControlLayout>
                  </EuiFieldText>
                </div>
              </div>
            </EuiFormRow>
          </div>
        </SetupIntegrationNewTable>
      </div>
    </EuiForm>
  </div>
</SetupIntegrationDataSource>
`;

exports[`Integration Setup Page Test Renders the existing table form as expected 1`] = `
<SetupIntegrationExistingTable
  config={
    Object {
      "dataSourceDescription": "Test Datasource Description",
      "dataSourceFileType": "json",
      "dataSourceLocation": "ss4o_logs-test-new-location",
      "dataSourceName": "Test Datasource Name",
      "existingDataSourceName": "ss4o_logs-test-existing-location",
      "instanceName": "Test Instance Name",
      "useExisting": true,
    }
  }
  setShowDataModal={[Function]}
  showDataModal={false}
  updateConfig={[Function]}
>
  <div>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      helpText="Manage data associated with this data source"
      label="Data Source"
      labelType="label"
    >
      <div
        className="euiFormRow"
        id="random_html_id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <EuiFormLabel
            className="euiFormRow__label"
            htmlFor="random_html_id"
            isFocused={false}
            type="label"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="random_html_id"
            >
              Data Source
            </label>
          </EuiFormLabel>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <EuiSelect
            aria-describedby="random_html_id-help-0"
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            options={
              Array [
                Object {
                  "text": "S3 connection name",
                  "value": "test_s3",
                },
                Object {
                  "text": "SS4O Logs Index",
                  "value": "logs_idx",
                },
              ]
            }
            value="ss4o_logs-test-existing-location"
          >
            <EuiFormControlLayout
              compressed={false}
              fullWidth={false}
              icon={
                Object {
                  "side": "right",
                  "type": "arrowDown",
                }
              }
              inputId="random_html_id"
              isLoading={false}
            >
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl>
                    <select
                      aria-describedby="random_html_id-help-0"
                      className="euiSelect"
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onMouseUp={[Function]}
                      value="ss4o_logs-test-existing-location"
                    >
                      <option
                        key="0"
                        value="test_s3"
                      >
                        S3 connection name
                      </option>
                      <option
                        key="1"
                        value="logs_idx"
                      >
                        SS4O Logs Index
                      </option>
                    </select>
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons
                    compressed={false}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <EuiFormControlLayoutCustomIcon
                        size="m"
                        type="arrowDown"
                      >
                        <span
                          className="euiFormControlLayoutCustomIcon"
                        >
                          <EuiIcon
                            aria-hidden="true"
                            className="euiFormControlLayoutCustomIcon__icon"
                            size="m"
                            type="arrowDown"
                          >
                            <EuiIconArrowDown
                              aria-hidden={true}
                              className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              role="img"
                              style={null}
                            >
                              <svg
                                aria-hidden={true}
                                className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height={16}
                                role="img"
                                style={null}
                                viewBox="0 0 16 16"
                                width={16}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                  fillRule="non-zero"
                                />
                              </svg>
                            </EuiIconArrowDown>
                          </EuiIcon>
                        </span>
                      </EuiFormControlLayoutCustomIcon>
                    </div>
                  </EuiFormControlLayoutIcons>
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiSelect>
          <EuiFormHelpText
            className="euiFormRow__text"
            id="random_html_id-help-0"
            key="Manage data associated with this data source"
          >
            <div
              className="euiFormHelpText euiFormRow__text"
              id="random_html_id-help-0"
            >
              Manage data associated with this data source
            </div>
          </EuiFormHelpText>
        </div>
      </div>
    </EuiFormRow>
    <EuiSpacer>
      <div
        className="euiSpacer euiSpacer--l"
      />
    </EuiSpacer>
    <EuiLink
      onClick={[Function]}
    >
      <button
        className="euiLink euiLink--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        View table
      </button>
    </EuiLink>
  </div>
</SetupIntegrationExistingTable>
`;

exports[`Integration Setup Page Test Renders the metadata form as expected 1`] = `
<SetupIntegrationMetadata
  name="Test Instance Name"
  setName={[Function]}
>
  <EuiForm>
    <div
      className="euiForm"
    >
      <EuiTitle>
        <h1
          className="euiTitle euiTitle--medium"
        >
          Name Integration
        </h1>
      </EuiTitle>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={false}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        helpText="The name will be used to label the newly added integration"
        label="Name"
        labelType="label"
      >
        <div
          className="euiFormRow"
          id="random_html_id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <EuiFormLabel
              className="euiFormRow__label"
              htmlFor="random_html_id"
              isFocused={false}
              type="label"
            >
              <label
                className="euiFormLabel euiFormRow__label"
                htmlFor="random_html_id"
              >
                Name
              </label>
            </EuiFormLabel>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <EuiFieldText
              aria-describedby="random_html_id-help-0"
              id="random_html_id"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="Test Instance Name"
            >
              <EuiFormControlLayout
                fullWidth={false}
                inputId="random_html_id"
              >
                <div
                  className="euiFormControlLayout"
                >
                  <div
                    className="euiFormControlLayout__childrenWrapper"
                  >
                    <EuiValidatableControl>
                      <input
                        aria-describedby="random_html_id-help-0"
                        className="euiFieldText"
                        id="random_html_id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="text"
                        value="Test Instance Name"
                      />
                    </EuiValidatableControl>
                    <EuiFormControlLayoutIcons />
                  </div>
                </div>
              </EuiFormControlLayout>
            </EuiFieldText>
            <EuiFormHelpText
              className="euiFormRow__text"
              id="random_html_id-help-0"
              key="The name will be used to label the newly added integration"
            >
              <div
                className="euiFormHelpText euiFormRow__text"
                id="random_html_id-help-0"
              >
                The name will be used to label the newly added integration
              </div>
            </EuiFormHelpText>
          </div>
        </div>
      </EuiFormRow>
    </div>
  </EuiForm>
</SetupIntegrationMetadata>
`;

exports[`Integration Setup Page Test Renders the new table form as expected 1`] = `
<SetupIntegrationNewTable
  config={
    Object {
      "dataSourceDescription": "Test Datasource Description",
      "dataSourceFileType": "json",
      "dataSourceLocation": "ss4o_logs-test-new-location",
      "dataSourceName": "Test Datasource Name",
      "existingDataSourceName": "ss4o_logs-test-existing-location",
      "instanceName": "Test Instance Name",
      "useExisting": true,
    }
  }
  updateConfig={[Function]}
>
  <div>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Title"
      labelType="label"
    >
      <div
        className="euiFormRow"
        id="random_html_id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <EuiFormLabel
            className="euiFormRow__label"
            htmlFor="random_html_id"
            isFocused={false}
            type="label"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="random_html_id"
            >
              Title
            </label>
          </EuiFormLabel>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <EuiFieldText
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value="Test Datasource Name"
          >
            <EuiFormControlLayout
              fullWidth={false}
              inputId="random_html_id"
            >
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl>
                    <input
                      className="euiFieldText"
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value="Test Datasource Name"
                    />
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons />
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiFieldText>
        </div>
      </div>
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Description (optional)"
      labelType="label"
    >
      <div
        className="euiFormRow"
        id="random_html_id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <EuiFormLabel
            className="euiFormRow__label"
            htmlFor="random_html_id"
            isFocused={false}
            type="label"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="random_html_id"
            >
              Description (optional)
            </label>
          </EuiFormLabel>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <EuiFieldText
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value="Test Datasource Description"
          >
            <EuiFormControlLayout
              fullWidth={false}
              inputId="random_html_id"
            >
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl>
                    <input
                      className="euiFieldText"
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value="Test Datasource Description"
                    />
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons />
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiFieldText>
        </div>
      </div>
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="File Type"
      labelType="label"
    >
      <div
        className="euiFormRow"
        id="random_html_id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <EuiFormLabel
            className="euiFormRow__label"
            htmlFor="random_html_id"
            isFocused={false}
            type="label"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="random_html_id"
            >
              File Type
            </label>
          </EuiFormLabel>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <EuiSelect
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            options={
              Array [
                Object {
                  "text": "parquet",
                  "value": "parquet",
                },
                Object {
                  "text": "json",
                  "value": "json",
                },
              ]
            }
            value="json"
          >
            <EuiFormControlLayout
              compressed={false}
              fullWidth={false}
              icon={
                Object {
                  "side": "right",
                  "type": "arrowDown",
                }
              }
              inputId="random_html_id"
              isLoading={false}
            >
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl>
                    <select
                      className="euiSelect"
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onMouseUp={[Function]}
                      value="json"
                    >
                      <option
                        key="0"
                        value="parquet"
                      >
                        parquet
                      </option>
                      <option
                        key="1"
                        value="json"
                      >
                        json
                      </option>
                    </select>
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons
                    compressed={false}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <EuiFormControlLayoutCustomIcon
                        size="m"
                        type="arrowDown"
                      >
                        <span
                          className="euiFormControlLayoutCustomIcon"
                        >
                          <EuiIcon
                            aria-hidden="true"
                            className="euiFormControlLayoutCustomIcon__icon"
                            size="m"
                            type="arrowDown"
                          >
                            <EuiIconArrowDown
                              aria-hidden={true}
                              className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              role="img"
                              style={null}
                            >
                              <svg
                                aria-hidden={true}
                                className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height={16}
                                role="img"
                                style={null}
                                viewBox="0 0 16 16"
                                width={16}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                  fillRule="non-zero"
                                />
                              </svg>
                            </EuiIconArrowDown>
                          </EuiIcon>
                        </span>
                      </EuiFormControlLayoutCustomIcon>
                    </div>
                  </EuiFormControlLayoutIcons>
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiSelect>
        </div>
      </div>
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label="Location to store table"
      labelType="label"
    >
      <div
        className="euiFormRow"
        id="random_html_id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <EuiFormLabel
            className="euiFormRow__label"
            htmlFor="random_html_id"
            isFocused={false}
            type="label"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="random_html_id"
            >
              Location to store table
            </label>
          </EuiFormLabel>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <EuiFieldText
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value="ss4o_logs-test-new-location"
          >
            <EuiFormControlLayout
              fullWidth={false}
              inputId="random_html_id"
            >
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl>
                    <input
                      className="euiFieldText"
                      id="random_html_id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value="ss4o_logs-test-new-location"
                    />
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons />
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiFieldText>
        </div>
      </div>
    </EuiFormRow>
  </div>
</SetupIntegrationNewTable>
`;
